# agg-gui

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  LICENSE  README.md  bevy_reflect_to_do.md  egui-demo-reimplementation-plan.md  hw_accelerated_2d_halo_aa_plan.html  svg_agg_plan.md  todo.md  wasm_output.txt
.cargo/: config.toml
.github/workflows/: ci.yml  deploy-demo.yml
agg-gui/: Cargo.toml  README.md
agg-gui/src/: animation.rs  app_state.rs  cursor.rs  draw_ctx.rs  event.rs  gfx_ctx.rs  lcd_coverage.rs  lcd_gfx_ctx.rs  lib.rs  screenshot.rs  svg.rs  tests.rs  text.rs  theme.rs  touch_state.rs  wasm_clipboard.rs  widget.rs
agg-gui/tests/: async_wakeup_cross_thread.rs  file_line_count.rs
demo/: build.ts  index.html  package.json  playwright.config.ts  server.ts  tsconfig.json
demo-gl/: Cargo.toml
demo-gl/src/: bar_grid.rs  ctx_core.rs  draw_ctx_impl.rs  frame.rs  gradient.rs  image_blit.rs  lib.rs  overlays.rs  shaders.rs
demo-native/: Cargo.toml
demo-native/src/: cube_widget.rs  main.rs  rendering.rs  startup_timing.rs
demo-ui/: Cargo.toml
demo-ui/src/: api.rs  app_builder.rs  app_builder_tests.rs  backend_panel.rs  content.rs  font_init.rs  font_picker.rs  lib.rs  rendering_test.rs  shell.rs  sidebar.rs  specs.rs  startup_timing.rs  state.rs  top_bar.rs  url.rs  (+1 more)
demo-wasm/: Cargo.toml
node-editor/: Cargo.toml
node-editor/src/: draw.rs  draw_tests.rs  lib.rs  model.rs  palette.rs  widget.rs
node-editor/src/widget/: events.rs  fingerprint.rs  host_hooks.rs  mod.rs  nodes.rs  nodes_tests.rs  popup.rs  tests.rs  value_editor_widget.rs
(+158 files in other folders)
