[package]
name = "demo-gl"
version = "0.1.0"
edition = "2021"
description = "Shared GlGfxCtx — DrawCtx implementation via glow (WebGL2 + native OpenGL)"

[features]
default = ["reflect"]
# Forwards to agg-gui's `reflect` feature so the live inspector edit-queue
# plumbing in `render_app_frame` is wired up.  Off → the inspector still
# displays properties read-only, but clicks don't apply edits.
reflect = ["agg-gui/reflect"]

[dependencies]
agg-gui  = { path = "../agg-gui" }
agg-rust = "1.0.2"
glow     = "0.13"
bytemuck = "1"
# Drop-in replacement for `std::time::Instant` that works on wasm32 —
# stdlib `Instant` panics in the browser sandbox.  Used by the shared
# bar-grid demo widget for the wave-animation time uniform.
web-time = "1"
